--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,87 +1,10 @@
-BeautifulSoup==3.2.1
-Django==1.4.3
-Flask==0.9
-Flask-Login==0.1.3
-Flask-MySQL==1.2
-Flask-OpenID==1.1.1
-Flask-SQLAlchemy==0.16
-Flask-WTF==0.8.2
-Jinja2==2.6
-MySQL-python==1.2.4
-PyRSS2Gen==1.0.0
-SQLAlchemy==0.8.0b2
-Tempita==0.5.1
-Twisted==12.0.0
-WTForms==1.0.2
-Werkzeug==0.8.3
-altgraph==0.9
-bdist-mpkg==0.4.4
-beautifulsoup4==4.1.3
-bonjour-py==0.3
-decorator==3.4.0
-fudge==1.0.3
-google-api-python-client==1.0
-gunicorn==17.5
-httplib2==0.7.7
-lxml==3.1beta1
-macholib==1.4.2
-modulegraph==0.9.1
-numpy==1.6.1
-oauth==1.0.1
-oauth2==1.5.211
-py2app==0.6.3
-pyOpenSSL==0.13
-pycurl==7.19.0
-pyobjc-core==2.3.2a0
-pyobjc-framework-AddressBook==2.3.2a0
-pyobjc-framework-AppleScriptKit==2.3.2a0
-pyobjc-framework-AppleScriptObjC==2.3.2a0
-pyobjc-framework-Automator==2.3.2a0
-pyobjc-framework-CFNetwork==2.3.2a0
-pyobjc-framework-CalendarStore==2.3.2a0
-pyobjc-framework-Cocoa==2.3.2a0
-pyobjc-framework-Collaboration==2.3.2a0
-pyobjc-framework-CoreData==2.3.2a0
-pyobjc-framework-CoreLocation==2.3.2a0
-pyobjc-framework-CoreText==2.3.2a0
-pyobjc-framework-DictionaryServices==2.3.2a0
-pyobjc-framework-ExceptionHandling==2.3.2a0
-pyobjc-framework-FSEvents==2.3.2a0
-pyobjc-framework-InputMethodKit==2.3.2a0
-pyobjc-framework-InstallerPlugins==2.3.2a0
-pyobjc-framework-InstantMessage==2.3.2a0
-pyobjc-framework-InterfaceBuilderKit==2.3.2a0
-pyobjc-framework-LatentSemanticMapping==2.3.2a0
-pyobjc-framework-LaunchServices==2.3.2a0
-pyobjc-framework-Message==2.3.2a0
-pyobjc-framework-OpenDirectory==2.3.2a0
-pyobjc-framework-PreferencePanes==2.3.2a0
-pyobjc-framework-PubSub==2.3.2a0
-pyobjc-framework-QTKit==2.3.2a0
-pyobjc-framework-Quartz==2.3.2a0
-pyobjc-framework-ScreenSaver==2.3.2a0
-pyobjc-framework-ScriptingBridge==2.3.2a0
-pyobjc-framework-SearchKit==2.3.2a0
-pyobjc-framework-ServerNotification==2.3.2a0
-pyobjc-framework-ServiceManagement==2.3.2a0
-pyobjc-framework-SyncServices==2.3.2a0
-pyobjc-framework-SystemConfiguration==2.3.2a0
-pyobjc-framework-WebKit==2.3.2a0
-pyobjc-framework-XgridFoundation==2.3.2a0
-python-dateutil==1.5
-python-gflags==2.0
-python-openid==2.2.5
-requests==1.1.0
-requests-oauth==0.4.1
-simplejson==3.0.7
-soundcloud==0.3.6
-sqlalchemy-migrate==0.7.2
-virtualenv==1.8.4
-web2py==2.1.1
-wget==2.0
+Flask==0.10.1
+Flask-SQLAlchemy==1.0
+Jinja2==2.7.1
+MarkupSafe==0.18
+SQLAlchemy==0.8.2
+Werkzeug==0.9.3
+distribute==0.6.31
+itsdangerous==0.23
+psycopg2==2.5.1
 wsgiref==0.1.2
-xattr==0.6.2
-xlrd==0.8.0
-yos-social-sdk==0.0.2
-yql==0.7.5
-zope.interface==3.5.1
